--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div id="content" class="content">
     <!-- Информация о профиле -->
     <div class="profile-info">
-        <img src="/images/123.jpg" alt="Изображение профиля" width="700" height="700"> <!-- Заглушка для изображения -->
+        <img src="/images/AI-Programmer.jpg" alt="Изображение профиля" width="700" height="700"> <!-- Заглушка для изображения -->
     </div>
 
     <!-- Детали профиля -->
@@ -34,13 +34,9 @@
             <div class="smiley">😊</div>
         </div>
         <div id="jobTitles">
-            <p class="jobTitle1">Веб-разработчик | Фронтенд-разработчик | Дизайнер веб-сайтов</p>
-            <p class="jobTitle2">Графический дизайнер | Специалист по монтажу видео | Специалист по визуальным эффектам</p>
-            <p class="jobTitle3">Веб-дизайнер | Веб-мастер | Специалист по оптимизации SEO</p>
-            <p class="jobTitle4">Специалист по анимации веб-сайтов | Веб-инженер | Веб-программист</p>
-            <p class="jobTitle5">Специалист по веб-хостингу и доменам | Full-stack разработчик</p>
+            <p class="jobTitle active">Веб-разработчик | Фронтенд-разработчик | Дизайнер веб-сайтов</p>
         </div>
-
+        <br>
 
         <!-- Значки социальных сетей с собственными иконками и ссылками, открывающимися в новом окне -->
         <div class="social-icons">
@@ -51,12 +47,12 @@
             <a href="https://www.linkedin.com/" target="_blank"><img src="/images/soc/linkedin.png" alt="LinkedIn" width="50" height="50"></a>
         </div>
 
-
+        <br>
         <p>
             <strong>Профессиональная цель:</strong><br><br>
             Я ищу возможность применить мои навыки в области дизайна, разработки веб-сайтов и программирования для создания качественных и инновационных проектов.
         </p>
-        <!-- Две кнопки -->
+        <br>
         <button>Контакты</button>
         <button>Портфолио</button>
     </div>
