--- a/menu/menu.html
+++ b/menu/menu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Меню</title>
+    <link rel="stylesheet" href="menu.css">
 </head>
 <body>
 <div id="menu" class="menu">
@@ -28,5 +29,6 @@
         <div class="tooltip">Контакты</div>
     </a>
 </div>
+<script src="menu.js"></script>
 </body>
 </html>
