--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1>Евгений Травинов</h1> <!-- ФИО -->
         <h2>Профессия</h2> <!-- Описание профессии -->
         <div class="thumbnail">
-            <div class="smiley">😊</div>
+            <div class="smiley">💻</div>
         </div>
         <div id="jobTitles">
             <p class="jobTitle active">Веб-разработчик | Фронтенд-разработчик | Дизайнер веб-сайтов</p>
