--- a/contacts/contacts.html
+++ b/contacts/contacts.html
@@ -14,9 +14,12 @@
 <div id="menu"></div>
 
 <!-- Фоновая анимация -->
-<div class="animated-background">
-    <div class="mirrored-triangle"></div>
-    <div class="mirrored-triangle-top"></div>
+<div class="background-with-logo">
+    <div class="animated-background">
+        <div class="mirrored-triangle"></div>
+        <div class="mirrored-triangle-top"></div>
+    </div>
+    <img class="logo" src="/images/logoETI2.png" alt="Логотип">
 </div>
 
 <!-- Контент -->
