--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
 <!-- Меню -->
 <div id="menu"></div>
 
-<!-- Фоновая анимация -->
-<div class="animated-background">
-    <div class="mirrored-triangle"></div>
-    <div class="mirrored-triangle-top"></div>
+<!-- Фоновая анимация с логотипом -->
+<div class="background-with-logo">
+    <div class="animated-background">
+        <div class="mirrored-triangle"></div>
+        <div class="mirrored-triangle-top"></div>
+    </div>
+    <img class="logo" src="/images/logoETI2.png" alt="Логотип">
 </div>
+
 
 <!-- Контент -->
 <div id="content" class="content">
@@ -28,8 +32,8 @@
 
     <!-- Детали профиля -->
     <div class="profile-details">
-        <h1>Евгений Травинов</h1> <!-- ФИО -->
-        <h2>Профессия</h2> <!-- Описание профессии -->
+        <h1>Евгений Травинов</h1>
+        <h2>Профессия</h2>
         <div class="thumbnail">
             <div class="smiley">💻</div>
         </div>
