--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -11,9 +11,13 @@
 <body>
 <div id="menu"></div>
 
-<div class="animated-background">
-    <div class="mirrored-triangle"></div>
-    <div class="mirrored-triangle-top"></div>
+
+<div class="background-with-logo">
+    <div class="animated-background">
+        <div class="mirrored-triangle"></div>
+        <div class="mirrored-triangle-top"></div>
+    </div>
+    <img class="logo" src="/images/logoETI2.png" alt="Логотип">
 </div>
 <div id="content" class="content">
     <div class="portfolio-heading">
