--- a/services/services.html
+++ b/services/services.html
@@ -3,60 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная страница</title>
-    <!-- Стили -->
-    <link rel="stylesheet" href="/styles.css">
+    <title>Услуги</title>
+    <link rel="stylesheet" href="services.css">
     <link rel="stylesheet" href="/global.css">
     <link rel="stylesheet" href="/menu/menu.css">
 </head>
 <body>
-<!-- Меню -->
 <div id="menu"></div>
-
-<!-- Фоновая анимация -->
-<div class="animated-background">
-    <div class="mirrored-triangle"></div>
-    <div class="mirrored-triangle-top"></div>
+<div class="background-with-logo">
+    <div class="animated-background">
+        <div class="mirrored-triangle"></div>
+        <div class="mirrored-triangle-top"></div>
+    </div>
+    <img class="logo" src="/images/logoETI2.png" alt="Логотип">
 </div>
 
-<!-- Контент -->
 <div id="content" class="content">
-    <!-- Информация о профиле -->
-    <div class="profile-info">
-        <img src="/images/123.jpg" alt="Изображение профиля" width="700" height="700"> <!-- Заглушка для изображения -->
-    </div>
-
-    <!-- Детали профиля -->
-    <div class="profile-details">
-        <h1>Имя Фамилия</h1> <!-- ФИО -->
-        <h2>Профессия</h2> <!-- Описание профессии -->
-
-        <div id="jobTitles">
-            <p class="jobTitle1">Веб-разработчик | Фронтенд-разработчик | Дизайнер веб-сайтов</p>
-            <p class="jobTitle2">Графический дизайнер | Специалист по монтажу видео | Специалист по визуальным эффектам</p>
-            <p class="jobTitle3">Веб-дизайнер | Веб-мастер | Специалист по оптимизации SEO</p>
-            <p class="jobTitle4">Специалист по анимации веб-сайтов | Веб-инженер | Веб-программист</p>
-            <p class="jobTitle5">Специалист по веб-хостингу и доменам | Full-stack разработчик</p>
-        </div>
-
-
-        <!-- Значки социальных сетей -->
-        <div class="social-icons">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-        </div>
-        <p>
-            <strong>Профессиональная цель:</strong><br>
-            Я ищу возможность применить мои навыки в области дизайна, разработки веб-сайтов и программирования для создания качественных и инновационных проектов.
-        </p>
-        <!-- Две кнопки -->
-        <button>Контакты</button>
-        <button>Портфолио</button>
+    <table>
+        <tr>
+            <th>Услуга</th>
+            <th>Описание</th>
+        </tr>
+        <tr>
+            <td>Веб-разработчик</td>
+            <td>Разработка веб-сайтов любой сложности с использованием различных технологий и языков программирования. Создание пользовательских интерфейсов и интерактивных элементов.</td>
+            <td>$1000</td>
+            <td><div class="checkbox"></div></td>
+        </tr>
+        <tr>
+            <td>Фронтенд-разработчик</td>
+            <td>Разработка клиентской части веб-приложений. Оптимизация и адаптация интерфейсов под разные устройства и браузеры.</td>
+            <td>$900</td>
+            <td><div class="checkbox"></div></td>
+        </tr>
+        <tr>
+            <td>Дизайнер веб-сайтов</td>
+            <td>Создание уникального дизайна для веб-сайтов с учетом потребностей заказчика и современных трендов. Разработка макетов и визуальных концепций.</td>
+            <td>$800</td>
+            <td><div class="checkbox"></div></td>
+        </tr>
+        <tr>
+            <td>Графический дизайнер</td>
+            <td>Создание графических элементов для веб-сайтов, включая логотипы, иллюстрации, иконки и т. д. Разработка брендбука и корпоративного стиля.</td>
+            <td>$850</td>
+            <td><div class="checkbox"></div></td>
+        </tr>
+        <tr>
+            <td>Специалист по монтажу видео и визуальным эффектам</td>
+            <td>Создание и монтаж видеороликов. Добавление визуальных эффектов и анимации к видеоматериалам.</td>
+            <td>$950</td>
+            <td><div class="checkbox"></div></td>
+        </tr>
+        <tr>
+            <td>Веб-дизайнер</td>
+            <td>Создание дизайна для веб-страниц и интерфейсов с учетом удобства использования и эстетики. Оптимизация дизайна для улучшения пользовательского опыта.</td>
+            <td>$750</td>
+            <td><div class="checkbox"></div></td>
+        </tr>
+        <tr>
+            <td>Веб-мастер</td>
+            <td>Управление содержимым веб-сайтов: обновление информации, добавление новых страниц и т. д. Мониторинг и обеспечение безопасности веб-ресурсов.</td>
+            <td>$700</td>
+            <td><div class="checkbox"></div></td>
+        </tr>
+        <tr>
+            <td>Специалист по оптимизации SEO</td>
+            <td>Повышение видимости веб-сайтов в поисковых системах. Оптимизация контента и технических параметров для улучшения ранжирования.</td>
+            <td>$800</td>
+            <td><div class="checkbox"></div></td>
+        </tr>
+        <tr>
+            <td>Специалист по анимации веб-сайтов</td>
+            <td>Создание анимированных элементов для визуального улучшения веб-страниц. Использование CSS, JavaScript и других инструментов для анимации.</td>
+            <td>$850</td>
+            <td><div class="checkbox"></div></td>
+        </tr>
+        <tr>
+            <td>Веб-инженер и веб-программист</td>
+            <td>Разработка и поддержка серверной части веб-приложений. Интеграция различных сервисов и API.</td>
+            <td>$950</td>
+            <td><div class="checkbox"></div></td>
+        </tr>
+        <tr>
+            <td>Специалист по веб-хостингу и доменам</td>
+            <td>Подбор и настройка хостинга и доменных имен для веб-проектов. Обеспечение надежности и безопасности хостинга.</td>
+            <td>$700</td>
+            <td><div class="checkbox"></div></td>
+        </tr>
+        <tr>
+            <td>Full-stack разработчик</td>
+            <td>Разработка как клиентской, так и серверной части веб-приложений. Широкий спектр навыков, включая работу с базами данных, серверами и фронтендом.</td>
+            <td>$1200</td>
+            <td><div class="checkbox"></div></td>
+        </tr>
+    </table>
+    <div id="summary">
+        <p>Сумма: <span id="totalPrice">0</span></p>
+        <p>Скидка: <span id="discount">0</span>%</p>
+        <p>Итого: <span id="finalPrice">0</span></p>
     </div>
 </div>
-
-<!-- Скрипты -->
+<script src="services.js"></script>
 <script src="/script.js"></script>
 <script src="/menu/menu.js"></script>
 </body>
